sumo/tests/dfrouter/detector_types/errors/no_sources/errors.dfrouter
Error: No source detectors found.
Quitting (on error).
